welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:6: error: type mismatch;
 found   : Int
 required: Boolean
  return n
         ^